--- a/views/location.ejs
+++ b/views/location.ejs
@@ -20,7 +20,20 @@
       }
     }
 
+    // Ova funkcija bi trebala citat iz baze(dohvat zadnjih pet prijava)
+    function getLogins(){
+      return [
+              {lat: 45.546206, long: 18.700875, user: "Dorian"},
+              {lat: 45.370919, long: 14.350810, user: "Filip"}, 
+              {lat: 45.899927, long: 16.864966, user: "Vrba"}, 
+              {lat: 43.499808, long: 16.472835, user: "Sosko"}, 
+              {lat: 45.143058, long: 16.279266, user: "Marin"}
+            ]
+    }
+
     function init(position) {
+      let markers = getLogins();
+
       const latitude  = position.coords.latitude;
       const longitude = position.coords.longitude;
 
@@ -35,8 +48,14 @@
         zoomOffset: -1,
         accessToken: token // 'sk.eyJ1IjoiMmRvbnMiLCJhIjoiY2t2Z2lqdXd6MTlodjJ1bjNsajZ1dWFmaSJ9.tR_rFBw_5v0uSq9sQP7YLg'
       }).addTo(mymap);
+      // Dodaj zadnjih 5 logina.
+      for (let i = 0; i < markers.length; i++) {
+        var marker = L.marker([markers[i]['lat'], markers[i]['long']]).addTo(mymap);
+        marker.bindPopup("<b>User: " + markers[i]['user'] + "</b><br><b>Latitude: " + markers[i]['lat'] + "</b><br><b>Longitude: " + markers[i]['long'] + "</b><br>");
+      }
+      // Dodaj svoju trenutnu lokaciju.
       var marker1 = L.marker([latitude, longitude]).addTo(mymap);
-      marker1.bindPopup("<b>User: Ja</b><br><b>Latitude: " + latitude + "</b><br><b>Longitude: " + longitude + "</b><br>").openPopup();
+      marker1.bindPopup("<b>User: Ja</b><br><b>Latitude: " + latitude + "</b><br><b>Longitude: " + longitude + "</b><br>");
     }
   </script>
 </head>
@@ -49,10 +68,11 @@
   <h3> Fer Username: dd510282 </h3>
 
   <p>Sve ispod ovog teksta vide samo ulogirani korisnici</p>
+  
 
   <% if (auth) { %>
     <div id="auth">
-  
+      <p><a href="<%=linkOUT%>">Logout</a></p>
       <hr>
       <h2>Prikaz brojčane vrijednoste trenutne lokacije</h2>
         <p>Klikni dugme kako bi otkrio di si!</p>
@@ -67,7 +87,7 @@
     <% } %>
     <% if (!auth) { %>
       <p>Nemate pravo pregledati ovaj sadržaj.</p>
-      <p><a href="<%=link%>">Login</a></p>
+      <p><a href="<%=linkIN%>">Login</a></p>
     <% } %>
 
     <script src="geolocation.js"></script>
