--- a/views/location.ejs
+++ b/views/location.ejs
@@ -60,7 +60,7 @@
   </script>
 </head>
 
-<body onload="generateMap();">
+<body>
   
 
   <h1> 1. Projekt iz "Napredni razvoj programske potpore za web" </h1>
@@ -80,6 +80,8 @@
         <p id="location"></p>
       <hr>
       <h2>Prikaz lokacije na karti</h2>
+      <p>Klikni dugme kako bi otkrio di si!</p>
+      <button onclick="generateMap()">Pronadi Me Na Karti!</button>
       <div id="map" style="height: 500px;"></div>
       <hr>
   
