Dodan resurs za demostraciju prijave korisnika

--- a/views/location_map.ejs
+++ b/views/location_map.ejs
@@ -15,7 +15,7 @@
     <h1> 1. Projekt iz "Napredni razvoj programske potpore za web" </h1>
     <h2> Author: Dorian Dončević(0036510282) </h2>
     <h3> Fer Username: dd510282 </h3>
-    <h4> Prikaz lokacije na karti </h4>
+    <h4> Prikaz lokacije na karti + Prikaz informacije o oznaci na karti. </h4>
 
     <div id="map" style="height: 500px;"></div>
 
