Dodan resurs '/all'  sa kombinacijom zadataka

--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -20,6 +20,7 @@
     <% } %>
     <% if (!auth) { %>
         <p>Nemate pravo pregledati ovaj sadržaj.</p>
+        <p><a href="<%=linkIN%>">Login</a></p>
     <% } %>
     
 </body>
