Pokusaj evidencije s tekstualnom datotekom

--- a/views/all.ejs
+++ b/views/all.ejs
@@ -24,6 +24,8 @@
         <p><%=email%></p>
         <p id="login_time"><%=timer%></p>
         <p><a href="<%=linkOUT%>">Logout</a></p>
+        <p id="get"><%=linkGetMarkeri%></p>
+        <p id="post"><%=linkPostMarkeri%></p>
         <hr>
         <p id="location_text"></p>
         <hr>
