--- a/views/all.ejs
+++ b/views/all.ejs
@@ -8,6 +8,7 @@
    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
+   <link rel="shortcut icon" type="image/jpg" href="https://www.fer.unizg.hr/_pub/themes_static/fer2016/default/img/FER_logo.png"/>
   <title>1.Projekt - dd51028</title>
 </head>
 
