--- a/views/all.ejs
+++ b/views/all.ejs
@@ -25,8 +25,8 @@
         <p><%=email%></p>
         <p id="login_time"><%=timer%></p>
         <p><a href="<%=linkOUT%>">Logout</a></p>
-        <p id="get"><%=linkGetMarkeri%></p>
-        <p id="post"><%=linkPostMarkeri%></p>
+        <p id="get" style="display: none;"><%=linkGetMarkeri%></p>
+        <p id="post" style="display: none;"><%=linkPostMarkeri%></p>
         <hr>
         <p id="location_text"></p>
         <hr>
